# acousto-tweezers

./: .gitignore  README.md  pyproject.toml
scripts/: animate_bottom25d.py  animate_patch_move_landscape_3d.py  animate_trap_steering_2d.py  demo_basin_maps_2d.py  demo_helmholtz_1d.py  demo_helmholtz_2d.py  demo_phase_sweep_2d.py  hello_plot.py  organise_results.py  validate_neumann_2d.py
src/acousto/analysis/: __init__.py  traps_2d.py
src/acousto/dynamics/: __init__.py  overdamped_2d.py
src/acousto/force/: __init__.py  gorkov_1d.py  gorkov_2d.py
src/acousto/solvers/: __init__.py  fd_helmholtz_1d.py  fd_helmholtz_2d.py  fd_helmholtz_2d_forced_25d.py
src/acousto_tweezers.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/tweezers/actuation/: patches.py  schedules.py
src/tweezers/viz/: render_3d.py
